[gd_scene load_steps=6 format=3 uid="uid://criq6ra7mgwb0"]

[ext_resource type="Script" path="res://map/TrackSemaphore.gd" id="1_p35uf"]
[ext_resource type="Theme" uid="uid://cgpmko4d01n84" path="res://game/ui-theme/theme.tres" id="2_dmt6l"]
[ext_resource type="Script" path="res://map/FakeButton.gd" id="3_i3m3m"]

[sub_resource type="BoxMesh" id="BoxMesh_7f7cy"]
size = Vector3(0.5, 5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_cf0sb"]
size = Vector3(1, 5, 1)

[node name="TrackSemaphore" type="Node3D"]
script = ExtResource("1_p35uf")

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
mesh = SubResource("BoxMesh_7f7cy")

[node name="Area3d" type="Area3D" parent="."]

[node name="CollisionShape3d" type="CollisionShape3D" parent="Area3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
shape = SubResource("BoxShape3D_cf0sb")

[node name="SemaphoreUi" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 400.0
offset_top = 400.0
offset_right = 400.0
offset_bottom = 400.0
theme = ExtResource("2_dmt6l")

[node name="Control" type="Control" parent="SemaphoreUi"]
layout_mode = 1
anchors_preset = 0
offset_left = -100.0
offset_top = -160.0
offset_right = 100.0

[node name="ColorRect" type="ColorRect" parent="SemaphoreUi/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_right = -120.0
offset_bottom = 56.6
grow_horizontal = 2
grow_vertical = 0
rotation = -1.02974
color = Color(0.14, 0.14, 0.14, 1)

[node name="ColorRect3" type="ColorRect" parent="SemaphoreUi/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = -60.0
offset_right = 80.0
offset_bottom = 56.6
grow_horizontal = 2
grow_vertical = 0
rotation = 1.02974
scale = Vector2(-1, 1)
color = Color(0.14, 0.14, 0.14, 1)

[node name="Panel" type="Panel" parent="SemaphoreUi/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="FakeButton" type="ColorRect" parent="SemaphoreUi/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0588235, 0.6, 0.0588235, 0)
script = ExtResource("3_i3m3m")

[node name="Label" type="Label" parent="SemaphoreUi/Control/Panel/FakeButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Clear & lock in"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
